plugins {
    id 'java'
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.6.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
    testImplementation 'com.approvaltests:approvaltests:12.3.1'
}

group = 'com.gildedrose'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = "20.PREVIEW"
targetCompatibility = "20.PREVIEW"

test {
    useJUnitPlatform()
    jvmArgs(['--enable-preview'])
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}
